--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">Header</header>
-    <div class="sidebar">Sidebar</div>
-    <div class="content">Content</div>
+    <div class="header">Header</div>
+    <div class="buceta">
+        <div class="sidebar">Sidebar</div>
+        <div class="content">Content</div>
+    </div>
+    
     <div class="footer">Footer</div>
 </body>
 </html>
